--- a/index.html
+++ b/index.html
@@ -16,5 +16,17 @@
 		<link rel="stylesheet" href="./style/reset.css" />
 		<link rel="stylesheet" href="./style/reset.css" />
 	</head>
-	<body></body>
+	<body>
+		<div class="wrap">
+			<header class="top-navbar">
+				<div class="top-navbar-serch">
+					<div class="top-navbar-btn">
+						<img src="" alt="" />
+					</div>
+					<h1></h1>
+					<div class="top-navbar-logo"></div>
+				</div>
+			</header>
+		</div>
+	</body>
 </html>
