--- a/index.html
+++ b/index.html
@@ -95,6 +95,262 @@
 					</div>
 				</div>
 			</section>
+			<!-- L -->
+			<section class="section-news">
+				<div class="section-news-container">
+					<div class="section-news-top-txt">
+						<p></p>
+					</div>
+					<div class="section-news-title">
+						<h4><span></span></h4>
+						<a href=""></a>
+					</div>
+					<div class="section-news-box">
+						<!-- 左邊大圖區塊 -->
+						<div class="section-news-bigpicbox">
+							<div class="section-news-big-pic">
+								<img src="" alt="" />
+							</div>
+							<!-- 兩個文字區塊 -->
+							<div class="section-news-bigpic-txt">
+								<div class="section-news-bigpic-l">
+									<p></p>
+								</div>
+								<div class="section-news-bigpic-r">
+									<p></p>
+								</div>
+							</div>
+						</div>
+						<!-- 右邊四張圖 -->
+						<div class="section-news-small-picbox">
+							<div class="section-news-small-card">
+								<span></span>
+								<div class="section-news-smallpic">
+									<img src="" alt="" />
+								</div>
+								<p></p>
+								<span></span>
+							</div>
+							<div class="section-news-small-card">
+								<span></span>
+								<div class="section-news-smallpic">
+									<img src="" alt="" />
+								</div>
+								<p></p>
+								<span></span>
+							</div>
+							<div class="section-news-small-card">
+								<span></span>
+								<div class="section-news-smallpic">
+									<img src="" alt="" />
+								</div>
+								<p></p>
+								<span></span>
+							</div>
+							<div class="section-news-small-card">
+								<span></span>
+								<div class="section-news-smallpic">
+									<img src="" alt="" />
+								</div>
+								<p></p>
+								<span></span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- R -->
+			<section class="section-news">
+				<div class="section-news-container">
+					<div class="section-news-top-txt">
+						<p></p>
+					</div>
+					<div class="section-news-title">
+						<h4><span></span></h4>
+						<a href=""></a>
+					</div>
+					<div class="section-news-box-r">
+						<!-- 左邊大圖區塊 -->
+						<div class="section-news-bigpicbox">
+							<div class="section-news-big-pic">
+								<img src="" alt="" />
+							</div>
+							<!-- 兩個文字區塊 -->
+							<div class="section-news-bigpic-txt">
+								<div class="section-news-bigpic-l">
+									<p></p>
+								</div>
+								<div class="section-news-bigpic-r">
+									<p></p>
+								</div>
+							</div>
+						</div>
+						<!-- 右邊四張圖 -->
+						<div class="section-news-small-picbox">
+							<div class="section-news-small-card">
+								<span></span>
+								<div class="section-news-smallpic">
+									<img src="" alt="" />
+								</div>
+								<p></p>
+								<span></span>
+							</div>
+							<div class="section-news-small-card">
+								<span></span>
+								<div class="section-news-smallpic">
+									<img src="" alt="" />
+								</div>
+								<p></p>
+								<span></span>
+							</div>
+							<div class="section-news-small-card">
+								<span></span>
+								<div class="section-news-smallpic">
+									<img src="" alt="" />
+								</div>
+								<p></p>
+								<span></span>
+							</div>
+							<div class="section-news-small-card">
+								<span></span>
+								<div class="section-news-smallpic">
+									<img src="" alt="" />
+								</div>
+								<p></p>
+								<span></span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- L -->
+			<section class="section-news">
+				<div class="section-news-container">
+					<div class="section-news-top-txt">
+						<p></p>
+					</div>
+					<div class="section-news-title">
+						<h4><span></span></h4>
+						<a href=""></a>
+					</div>
+					<div class="section-news-box">
+						<!-- 左邊大圖區塊 -->
+						<div class="section-news-bigpicbox">
+							<div class="section-news-big-pic">
+								<img src="" alt="" />
+							</div>
+							<!-- 兩個文字區塊 -->
+							<div class="section-news-bigpic-txt">
+								<div class="section-news-bigpic-l">
+									<p></p>
+								</div>
+								<div class="section-news-bigpic-r">
+									<p></p>
+								</div>
+							</div>
+						</div>
+						<!-- 右邊四張圖 -->
+						<div class="section-news-small-picbox">
+							<div class="section-news-small-card">
+								<span></span>
+								<div class="section-news-smallpic">
+									<img src="" alt="" />
+								</div>
+								<p></p>
+								<span></span>
+							</div>
+							<div class="section-news-small-card">
+								<span></span>
+								<div class="section-news-smallpic">
+									<img src="" alt="" />
+								</div>
+								<p></p>
+								<span></span>
+							</div>
+							<div class="section-news-small-card">
+								<span></span>
+								<div class="section-news-smallpic">
+									<img src="" alt="" />
+								</div>
+								<p></p>
+								<span></span>
+							</div>
+							<div class="section-news-small-card">
+								<span></span>
+								<div class="section-news-smallpic">
+									<img src="" alt="" />
+								</div>
+								<p></p>
+								<span></span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- R -->
+			<section class="section-news">
+				<div class="section-news-container">
+					<div class="section-news-top-txt">
+						<p></p>
+					</div>
+					<div class="section-news-title">
+						<h4><span></span></h4>
+						<a href=""></a>
+					</div>
+					<div class="section-news-box-r">
+						<!-- 左邊大圖區塊 -->
+						<div class="section-news-bigpicbox">
+							<div class="section-news-big-pic">
+								<img src="" alt="" />
+							</div>
+							<!-- 兩個文字區塊 -->
+							<div class="section-news-bigpic-txt">
+								<div class="section-news-bigpic-l">
+									<p></p>
+								</div>
+								<div class="section-news-bigpic-r">
+									<p></p>
+								</div>
+							</div>
+						</div>
+						<!-- 右邊四張圖 -->
+						<div class="section-news-small-picbox">
+							<div class="section-news-small-card">
+								<span></span>
+								<div class="section-news-smallpic">
+									<img src="" alt="" />
+								</div>
+								<p></p>
+								<span></span>
+							</div>
+							<div class="section-news-small-card">
+								<span></span>
+								<div class="section-news-smallpic">
+									<img src="" alt="" />
+								</div>
+								<p></p>
+								<span></span>
+							</div>
+							<div class="section-news-small-card">
+								<span></span>
+								<div class="section-news-smallpic">
+									<img src="" alt="" />
+								</div>
+								<p></p>
+								<span></span>
+							</div>
+							<div class="section-news-small-card">
+								<span></span>
+								<div class="section-news-smallpic">
+									<img src="" alt="" />
+								</div>
+								<p></p>
+								<span></span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</div>
 	</body>
 </html>
