--- a/index.html
+++ b/index.html
@@ -21,9 +21,16 @@
 			<header class="top-navbar">
 				<div class="top-navbar-serch">
 					<div class="top-navbar-btn">
-						<img src="" alt="" />
+						<img src="./img/common/search.svg" alt="側邊搜尋欄" />
+						<div class="top-navbar-btn-txt">
+							<a href="#">ハワイ州</a>
+							<a href="#">レスポンシブル・ツーリズム</a>
+							<a href="#">情報サイト</a>
+						</div>
 					</div>
-					<h1></h1>
+					<h1>
+						<img src="./img/common/logo.svg" alt="" />
+					</h1>
 					<div class="top-navbar-logo">
 						<img src="" alt="" />
 					</div>
@@ -32,11 +39,11 @@
 			<section class="top-navbar-list">
 				<a href=""></a>
 				<nav class="top-navbar-list-nav">
-					<a href=""></a>
-					<a href=""></a>
-					<a href=""></a>
-					<a href=""></a>
-					<a href=""></a>
+					<a href="">旅行者にできること</a>
+					<a href="">取組み紹介</a>
+					<a href="">関連映像</a>
+					<a href="">コミュニティ</a>
+					<a href="">特集</a>
 				</nav>
 				<a href=""></a>
 			</section>
