--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 						</div>
 					</div>
 					<h1>
-						<img src="./img/common/logo.svg" alt="" />
+						<img src="./img/common/logo.svg" alt="malamahawaii" />
 					</h1>
 					<div class="top-navbar-logo">
-						<img src="" alt="" />
+						<img src="./img/common/hawaiianIsland.png" alt="夏威夷島" />
 					</div>
 				</div>
 			</header>
