--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				</div>
 			</header>
 			<section class="top-navbar-list">
-				<a href=""></a>
+				<a href="">マラマハワイとは</a>
 				<nav class="top-navbar-list-nav">
 					<a href="">旅行者にできること</a>
 					<a href="">取組み紹介</a>
@@ -45,20 +45,28 @@
 					<a href="">コミュニティ</a>
 					<a href="">特集</a>
 				</nav>
-				<a href=""></a>
+				<a href="">業界関係の方へ</a>
 			</section>
 			<!-- big picture -->
 			<section class="section-banner">
 				<!-- 旋轉小圖 -->
 				<div class="section-banner-pic">
-					<img src="" alt="" />
+					<img src="./img/home/main.jpg" alt="手" />
 				</div>
 				<article class="section-banner-article">
 					<div class="section-banner-article-pic">
-						<img src="" alt="" />
+						<img src="./img/home/scroll_more.svg" alt="" />
 					</div>
 					<div class="section-banner-article-txt">
-						<p></p>
+						<p>
+							美しい楽園ハワイは、永遠ではありません。<br />
+							山から海まで、ハワイに生きる美しい自然や文化に<br />
+							「マラマ = 思いやりの心」を持って接すること。<br />
+							レスポンシブル・ツーリズムは、そんな思いやりの心を<br />
+							旅の中で実践していく、新しい観光のカタチです。<br />
+							ハワイが何十年後も、何百年後も、素晴らしい楽園であるよう<br />
+							旅行者のみなさんだからできることがあります。<br />
+						</p>
 					</div>
 				</article>
 			</section>
