--- a/index.html
+++ b/index.html
@@ -73,10 +73,20 @@
 			<!-- 海龜 -->
 			<section class="section-feature">
 				<div class="section-feature-container">
-					<div class="section-feature-pic"></div>
+					<div class="section-feature-pic">
+						<img src="./img/home/main_turtle.jpg" alt="海龜" />
+					</div>
 					<div class="section-feature-txt">
-						<h2></h2>
-						<p></p>
+						<h2>
+							美しいハワイを<br />
+							未来へとつなぐために<br />
+							わたしたちができること<br />
+						</h2>
+						<p>
+							ハワイは世界の絶滅危惧種の宝庫と呼ばれるほど、貴重な生物がたくさん生息しています。ウミガメ、イルカ、クジラ、サンゴ礁。これらを守るためにも、知ってもらいたいことやルールがあります。これからは旅行者にも、ハワイの島々の自然や文化を守り、現地住民が大切にする場所を敬い、美しいハワイを未来へつなげていく行動が求められます。 「レスポンシブル・ツーリズム」一緒にはじめませんか。
+						</p>
+						<a href="#">マラマハワイとは</a>
+						<img src="./img/common/right_arrow_short.svg" alt="向左小箭頭" />
 					</div>
 				</div>
 			</section>
@@ -84,28 +94,37 @@
 				<div class="section-beautiful-container">
 					<div class="section-beautiful-title">
 						<h3>
-							<span></span>
+							What We Can Do to
+							<span>Keep Hawai‘i Beautiful</span>
+							for the Future.
 						</h3>
 					</div>
 					<div class="section-beautiful-small-title">
-						<p></p>
+						<p>ABOUT MĀLAMA HAWAI‘I</p>
 					</div>
 					<!-- 卡片3張區塊 -->
 					<div class="section-beautiful-box">
 						<div class="section-beautiful-item">
-							<h4></h4>
-							<p></p>
-							<span></span>
+							<h4>責任ある旅行“レスポンシブル・ツーリズム”について</h4>
+							<!-- 詳しく見る 用after寫-->
+							<p>
+								観光客もツーリズムを構成する要素であると捉え、観光客が意識や行動に責任を持つことで、より良い観光地形成を行っていこうという考え方です。
+							</p>
+							<span>WHAT IS “RESPONSIBLE TOURISM”</span>
 						</div>
 						<div class="section-beautiful-item">
-							<h4></h4>
-							<p></p>
-							<span></span>
+							<h4>ハワイ独自の取り組み“アロハプラスチャレンジ”について</h4>
+							<p>
+								SDG’sを基準にハワイ州が独自のゴールを設定した特別プログラムです。官民一体となり経済、社会、環境の側面からを持続可能な社会を目指します。
+							</p>
+							<span>ABOUT “ALOHA + CHALLENGE”</span>
 						</div>
 						<div class="section-beautiful-item">
-							<h4></h4>
-							<p></p>
-							<span></span>
+							<h4>ハワイ州観光局からのメッセージ</h4>
+							<p>
+								歴史的にも深い関係を持つ日本とハワイが、これからも共に支え合い、高め合う良い関係が継続できるようハワイ州観光局もサポートしていきます。
+							</p>
+							<span>MESSAGE FROM HAWAI‘I TOURISM JAPAN</span>
 						</div>
 					</div>
 				</div>
@@ -114,10 +133,10 @@
 			<section class="section-news">
 				<div class="section-news-container">
 					<div class="section-news-top-txt">
-						<p></p>
+						<p>LATEST</p>
 					</div>
 					<div class="section-news-title">
-						<h4><span></span></h4>
+						<h4>旅行者にできること<span>What Travelers Can Do</span></h4>
 						<a href=""></a>
 					</div>
 					<div class="section-news-box">
