--- a/index.html
+++ b/index.html
@@ -137,21 +137,26 @@
 					</div>
 					<div class="section-news-title">
 						<h4>旅行者にできること<span>What Travelers Can Do</span></h4>
-						<a href=""></a>
+						<a href="#">すべて見る</a>
 					</div>
 					<div class="section-news-box">
 						<!-- 左邊大圖區塊 -->
 						<div class="section-news-bigpicbox">
 							<div class="section-news-big-pic">
-								<img src="" alt="" />
+								<img
+									src="./img/cfimg/Screenshot-107.png"
+									alt="一群人坐在沙灘"
+								/>
 							</div>
 							<!-- 兩個文字區塊 -->
 							<div class="section-news-bigpic-txt">
 								<div class="section-news-bigpic-l">
-									<p></p>
+									<p>今年もアースデーにビーチクリーンを開催！</p>
 								</div>
 								<div class="section-news-bigpic-r">
-									<p></p>
+									<p>
+										毎年4月22日は地球環境について考える日「アースデー」。最近ではこの日だけでなく、4月をアース月間として世界中で環境保護活動が行われるようになりました。太平洋の
+									</p>
 								</div>
 							</div>
 						</div>
@@ -196,26 +201,28 @@
 			<!-- R -->
 			<section class="section-news">
 				<div class="section-news-container">
-					<div class="section-news-top-txt">
-						<p></p>
-					</div>
 					<div class="section-news-title">
-						<h4><span></span></h4>
-						<a href=""></a>
+						<h4>企業の取組み<span>Corporate Initiatives</span></h4>
+						<a href="">すべて見る</a>
 					</div>
 					<div class="section-news-box-r">
-						<!-- 左邊大圖區塊 -->
+						<!-- 右邊大圖區塊 -->
 						<div class="section-news-bigpicbox">
 							<div class="section-news-big-pic">
-								<img src="" alt="" />
+								<img src="./img/cfimg/12-Group-photo.jpeg" alt="" />
 							</div>
 							<!-- 兩個文字區塊 -->
 							<div class="section-news-bigpic-txt">
 								<div class="section-news-bigpic-l">
-									<p></p>
+									<p>
+										【チームJALハワイ】ビーチクリーンアップ活動で地元コミュニティに貢献！￼
+									</p>
 								</div>
 								<div class="section-news-bigpic-r">
-									<p></p>
+									<p>
+										JALハワイ支店とJALPAK International
+										Hawaiiで構成された“チームJALハワイ”は、ハワイ州観光局が提唱する「マラマハワイ～ハワイを思
+									</p>
 								</div>
 							</div>
 						</div>
